Fix some issues with fullwidth blocks on styled layout (#676)
* Fix lastest posts in fullwidth group

* Avoid extra padding on nested WP group blocks

--- a/sass/wp-blocks/group.scss
+++ b/sass/wp-blocks/group.scss
@@ -4,8 +4,6 @@
 
     &.alignfull {
         width: 100vw;
-        display: flex;
-        justify-content: center;
 
         margin-left: calc(50% - 50vw);
         margin-right: calc(50% - 50vw);
